crates/analyzer/tests/snapshots/errors__invalid_tuple_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No field `item5` exists on this tuple
  ┌─ compile_errors/invalid_tuple_field.fe:5:18
  │
5 │         self.val.item5
  │                  ^^^^^ unknown field
  │
  = Note: The highest possible field for this tuple is `item1`


